--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# --- AI & Data Core Requirements ---
 bleach==6.2.0
 certifi==2025.8.3
 charset-normalizer==3.4.3
@@ -17,10 +18,10 @@ mpmath==1.3.0
 networkx==3.4.2
 numpy==2.2.6
 opencv-python==4.12.0.88
-packaging==25.0
+packaging==24.2
 pandas==2.3.2
-pillow==11.3.0
-protobuf==6.32.0
+pillow==10.4.0
+protobuf==5.27.2
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-slugify==8.0.4
@@ -39,3 +40,9 @@ typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
 webencodings==0.5.1
+
+# --- Full Stack Requirements ---
+fastapi==0.111.0
+uvicorn[standard]==0.29.0
+streamlit==1.36.0
+python-multipart==0.0.9
